kubernetes/base/network/envoy-ai-gateway/gatewayclass.yaml
---
# yaml-language-server: $schema=https://k8s-schemas.home-operations.com/gateway.networking.k8s.io/gatewayclass_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: envoy-ai
spec:
  controllerName: gateway.envoyproxy.io/gatewayclass-controller
